--- a/MyFlatWPF/MainWindow.xaml
+++ b/MyFlatWPF/MainWindow.xaml
@@ -241,7 +241,7 @@
             <Border x:Name="bUserName"
                     BorderBrush="White"
                     BorderThickness="0 0 0 0">
-                <Button x:Name="btnUserName"
+                <Label x:Name="lUserName"
                     Content="{Binding UserName, Source={StaticResource MainWindowViewModel}}"
                     Visibility="Collapsed"
                     Cursor="Arrow"
@@ -253,7 +253,7 @@
                     BorderThickness="0 0 0 0"
                     BorderBrush="White">
 
-                </Button>
+                </Label>
             </Border>
 
             <Border x:Name="bRegister"
