--- a/MyFlatWPF/View/LoginView.xaml
+++ b/MyFlatWPF/View/LoginView.xaml
@@ -252,7 +252,8 @@
             Orientation="Horizontal"
             VerticalAlignment="Top"
             Margin="0 10 0 0">
-            <Button Content="Log in"
+            <Button x:Name="btnLogin"
+                Content="Log in"
                     Style="{StaticResource LogInButton}"
                     Width="80"
                     Margin="0,0,0,12">
